Обновил фильтрацию
